index.css
* {
    font-family: 'Libre Baskerville', serif;
    margin: 0;
    padding: 0;
}

body {
    background-color: #f8f8ff;
}

#cy {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0px;
    left: 0px;
}

.cy-panzoom {
    right: 5%;
}

#loading {
    position: absolute;
    display: block;
    left: 0;
    top: 50%;
    width: 100%;
    text-align: center;
    margin-top: -0.5em;
    font-size: 2em;
    color: #000;
}

#loading.loaded {
    display: none;
}

#relationship_legend {
    z-index: 99998;
    width: auto;
    height: auto;
    background: #fcfcfc;
    line-height: 1.6em;
    font-size: 0.85em;
    border-right: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    opacity: 0.85;
    bottom: 0;
    position: fixed;
    right: 0.5%;
    padding-bottom: 10px;
}

ul li {
    list-style: none;
}

#relationship_legend ul {
    columns: 3;
    -webkit-columns: 3;
    -moz-columns: 3;
}

span.leg_circ {
    display: inline-block;
    width: 10px;
    height: 10px;
    border: 1px solid #999;
    border-radius: 6px;
    margin-right: 10px;
}

#node-search-container {
    z-index: 2000000;
    position: fixed;
    bottom: 0;
    padding: 10px;
    width: auto;
    height: auto;
    line-height: 1.6em;
    font-size: 0.85em;
    opacity: 0.85;
    background: #fcfcfc;
    border: 1px solid #ddd;
}

.tippy-content div.label {
    border-bottom: 1px solid #fff;
}

.list-item {
    display: flex;
}

.list-item .list-item-description {
    margin-left: 10px;
    font-style: italic;
}

.list-item .list-item-tooltip {
    position: absolute;
    color: white;
    width: 250px;
    line-height: 1.2;
    background-color: #004b8c;
    text-align: center;
    padding: 10px;
    border-radius: 10px;
    display: none;
    z-index: 99999;
    box-shadow: 0 1px 3px 3px rgba(0, 0, 0, .05);
}

.list-item .list-item-tooltip:after {
    content: " ";
    position: absolute;
    top: 50%;
    right: 100%;
    margin-top: -10px;
    border-width: 10px;
    border-style: solid;
    border-color: transparent #004b8c transparent transparent;
}

.tippy-tooltip.normanblue-theme {
    background-color: #004b8c;
    color: white;
}

.tippy-tooltip.normanblue-theme[data-animatefill] {
    background-color: transparent;
}

.tippy-tooltip.normanblue-theme .tippy-backdrop {
    background-color: #004b8c;
}

.person-image-container {
    height: 160px;
    width: 100px;
}

.person-image {
    height: 100%;
    width: 100%;
    object-fit: contain
}

